--- a/test/com/googlecode/barongreenback/shared/faceting-test.html
+++ b/test/com/googlecode/barongreenback/shared/faceting-test.html
@@ -79,7 +79,7 @@
 </div>
 <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="https://cdn.rawgit.com/appendto/jquery-mockjax/v1.6.0/jquery.mockjax.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mockjax/1.6.2/jquery.mockjax.min.js"></script>
 <script src="https://code.jquery.com/qunit/qunit-1.10.0.js"></script>
 <script>
     var addProdFiles = function (files, callback) {
